@@ -11,6 +11,7 @@ S3method(summary,effect.size)
 S3method(summary,loess.boot)
 export(all_pairwise)
 export(annulus.matrix)
+export(aspline.downscale)
 export(background)
 export(bbox_poly)
 export(bearing.distance)
